--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "interview",
+  "name": "my_website",
   "version": "1.0.0",
-  "description": "",
+  "description": "my personal website for recording",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,8 +10,8 @@
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["interview" , "front_end_development"],
+  "author": "dboo",
   "license": "ISC",
   "devDependencies": {
     "vitepress": "1.0.0-rc.44"
